started implementing notifications
On the new course form I've started adding notifications to handle
the events of success and error, still some polishing to do.
Working towards #28

--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,10 @@
 {
   "name": "dsl-generated dependencies",
   "dependencies": {
-    "angular": "1.2.22",
+    "angular": "latest",
     "angular-route": "latest",
     "angular-resource": "latest",
-    "angular-devise": "latest"
+    "angular-devise": "latest",
+    "angular-animate": "~1.2.23"
   }
 }
