added more feedback to the UI, basics finished :godmode:
this commit should close #28, added pace.js and notification
messages for every action. Maybe in the future I could block the
button while the action is being performed, but for now it does what
I want it to do.

--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "angular-route": "latest",
     "angular-resource": "latest",
     "angular-devise": "latest",
-    "angular-animate": "~1.2.23"
+    "angular-animate": "~1.2.23",
+    "pace": "~0.5.6"
   }
 }
