--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
   "name": "dsl-generated dependencies",
   "dependencies": {
-    "angular": "latest",
-    "angular-route": "latest",
-    "angular-resource": "latest",
+    "angular": "^1.3.x",
+    "angular-animate": "^1.3.x",
+    "angular-route": "^1.3.x",
+    "angular-resource": "^1.3.x",
     "angular-devise": "latest",
-    "angular-animate": "~1.2.23",
-    "pace": "~0.5.6"
+    "pace": "latest"
   }
 }
